refactoring swagger, synced token name and responses,  add default values
